# taskr-CLI

./: .gitignore  README.md  pyproject.toml
src/taskr/: display.py  main.py  models.py  storage.py
tests/: test_commands.py
